--- a/final_report_tex/acronyms.tex
+++ b/final_report_tex/acronyms.tex
@@ -9,4 +9,5 @@
 \newacronym{tcn}{TCN}{Temporal Convolutional Network}
 \newacronym{erm}{ERM}{Elman Recurrent Network}
 \newacronym{mlp}{MLP}{Multilayer Perceptron}
-\newacronym{lrdecay}{lrDecay}{learning rate decay}
+\newacronym{lrdecay}{lrDecay}{Learning rate decay}
+\newacronym{eol}{EOL}{End of life}
